# hackupc-2026-midi

./: .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix
.zed/: debug.json
assets/: out
assets/33050__gamedrix974__grand-piano-1-sustain-pedal-held/: _readme_and_license.txt
assets/testfiles/: Moonlight Sonata 3rd Movement.midi (piano only).mid  Op10No3Midi.mid  SimpleMidi.mid
src/: Makefile  README.md  app_mode.hh  audio_recording.cc  audio_recording.hh  compile_flags.txt  custom_file_explorer.cc  fft.hh  gui_file_explorer.hh  main.c  main.cc  note_player.cc  note_player.hh  parsing  parsing.cc  parsing.hh  raygui.h  sheet.cc  sheet.hh  tests.hh  utils.hh  waving.cc  waving.hh  window_common.cc  window_common.hh  window_midi_editor.cc  window_midi_editor.hh  window_midi_player.cc  window_midi_player.hh
